tweaks for james